[package]
name = "emulator_pixel"
version = "0.1.0"
authors = ["Wolfgang Bischoff <w.bischoff@geze.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.2"
num-derive = "0.3"
num-traits = "0.2"
num_enum = "0.1.1"
byteorder = "1.3.4"
env_logger = "0.7.1"
getrandom = "0.1.14"
line_drawing = "0.8.0"
log = { version = "0.4.8", features = [ "release_max_level_warn" ] }
randomize = "3.0.1"
winit = "0.22.0"
winit_input_helper = "0.6.0"
thiserror = "1.0.15"
wgpu = "0.5.0"
futures-executor = "0.3"
ultraviolet = "0.4.6"
#pixels-mocks = { path = "pixels-mocks" }
pixels = "0.0.4"
